# manatui

./: .gitignore  Cargo.toml  cargo-generate.toml  readme.md
.cargo/: config.toml
benches/: bench-criterion-01.rs  bench-iai-01.rs
examples/example-tea-ui-components/: Cargo.toml
examples/example-tea-ui-components/src/: main.rs
examples/tea-focus-example/: Cargo.toml
examples/tea-focus-example/src/: input.rs  main.rs
mana-tui-beheaded/: Cargo.toml
mana-tui-elemental/: Cargo.toml
mana-tui-elemental/src/: layout.rs  ui.rs
mana-tui-macros/: Cargo.toml
mana-tui-macros/src/: manasx.rs
mana-tui-potion/: Cargo.toml
mana-tui-potion/examples/: counter.rs  inline-viewport.rs
mana-tui-potion/src/: backends.rs  lib.rs
mana-tui-potion/src/focus/: focus.rs  handlers.rs
mana-tui-utils/: Cargo.toml
mana-tui-utils/src/: lib.rs
manatui-beheaded/: Cargo.toml
manatui-beheaded/src/: lib.rs  schedule.rs
manatui-bench/: Cargo.toml
manatui-bench/benches/: bench-criterion-01.rs  bench-gungraun-01.rs
manatui-bench/src/: lib.rs
manatui-elemental/: Cargo.toml  readme.md
manatui-elemental/src/: layout.rs  lib.rs  prelude.rs  ui.rs
manatui-layout/: Cargo.toml  readme.md
manatui-layout/src/: layout.rs  lib.rs  prelude.rs  ui.rs
manatui-macros/: Cargo.toml
manatui-macros/src/: lib.rs  manasx.rs  subview.rs  utils.rs
manatui-macros/tests/: ui.rs
manatui-potion/: Cargo.toml
manatui-potion/examples/: counter.rs  inline-viewport.rs
manatui-potion/src/: lib.rs
manatui-potion/src/focus/: focus.rs
manatui-tea/: Cargo.toml
manatui-tea-ui/: Cargo.toml
manatui-tea-ui/src/: common.rs  lib.rs
manatui-tea-ui/src/components/: button.rs  components.rs  list.rs  pager.rs  text_input.rs
manatui-tea/examples/: counter.rs  hot-loop.rs  inline-viewport.rs  tachyonfx.rs
manatui-tea/src/: backends.rs  fx.rs  lib.rs  observe.rs  term.rs
manatui-tea/src/focus/: focus.rs
manatui-utils/: Cargo.toml
manatui-utils/src/: lib.rs  resource.rs
src/: benches.rs  lib.rs  tests.rs
templates/minimal-unstable/: Cargo.toml
templates/minimal-unstable/src/: main.rs
xtask/: Cargo.toml
