[package]
name = "mana-tui"
version = "0.0.1"
edition = "2024"
license = "MIT"

[features]
macros = ["dep:bon", "dep:mana-tui-macros"]
nightly = ["mana-tui-elemental/nightly"]

[dependencies]
mana-tui-elemental.workspace = true
mana-tui-utils.workspace = true
mana-tui-potion.workspace = true
mana-tui-macros = { workspace = true, optional = true }
ratatui.workspace = true
bon = { workspace = true, optional = true }

[dev-dependencies]
bon.workspace = true
color-eyre = "0.6.5"
hecs.workspace = true
mana-tui-elemental.workspace = true
mana-tui-macros.workspace = true
ratatui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[workspace]
members = [
    "mana-tui-elemental",
    "mana-tui-macros",
    "mana-tui-utils",
    "mana-tui-potion",
]
resolver = "3"

[workspace.dependencies]
glam = "0.32.0"
bon = { version = "3.9.0", features = ["experimental-overwritable"] }
convert_case = "0.10" 
derive_more = { version = "2.1.1", features = ["full"] }
hecs = { version = "0.11.0", features = ["macros"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
mana-tui-elemental = { path = "./mana-tui-elemental" }
mana-tui-macros = { path = "./mana-tui-macros" }
mana-tui-utils = { path = "./mana-tui-utils" }
mana-tui-potion = { path = "./mana-tui-potion" }

[workspace.lints.clippy]
pedantic = "warn"
