[package]
name = "manatui"
version = "0.0.1"
edition = "2024"
license = "MIT"

[features]
macros = ["dep:bon", "dep:manatui-macros"]
nightly = ["manatui-layout/nightly"]

[dependencies]
manatui-layout.workspace = true
manatui-utils.workspace = true
manatui-tea.workspace = true
manatui-macros = { workspace = true, optional = true }
ratatui.workspace = true
bon = { workspace = true, optional = true }

[dev-dependencies]
bon.workspace = true
color-eyre = "0.6.5"
hecs.workspace = true
manatui-layout.workspace = true
manatui-macros.workspace = true
ratatui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[workspace]
members = [
    "manatui-layout",
    "manatui-macros",
    "manatui-utils",
    "manatui-tea", "manatui-bench",
]
resolver = "3"

[workspace.dependencies]
glam = "0.32.0"
bon = { version = "3.9.0", features = ["experimental-overwritable"] }
derive_more = { version = "2.1.1", features = ["full"] }
hecs = { version = "0.11.0", features = ["macros"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
manatui-layout = { path = "./manatui-layout" }
manatui-macros = { path = "./manatui-macros" }
manatui-utils = { path = "./manatui-utils" }
manatui-tea = { path = "./manatui-tea" }

[workspace.lints.clippy]
pedantic = "warn"
