[package]
name = "mana-tui-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui.workspace = true
bon = { workspace = true, features = ["experimental-overwritable"] }
derive_more.workspace = true
tracing.workspace = true
hecs.workspace = true
glam = "0.32.0"
smallvec = "1.15.1"
im = "15.1.0"

[dev-dependencies]
mana-tui = { path = "..", features = ["nightly", "macros"] }
mana-tui-macros.workspace = true 
tracing-subscriber = "0.3.22"

[lints]
workspace = true
