[package]
name = "manatui-beheaded"
version = "0.1.0"
edition = "2024"

[dependencies]
manatui-elemental.workspace = true
ratatui.workspace = true
bon = { workspace = true, features = ["experimental-overwritable"] }
derive_more.workspace = true
tracing.workspace = true
hecs.workspace = true
glam = "0.32.0"
strum = { version = "0.27.2", features = ["derive"] }
tui-scrollview = "0.6.2"
smallvec = "1.15.1"
crossterm = { version = "0.29.0", default-features = false, features = ["event-stream"] }
flume = { version = "0.12.0", default-features = false, features = ["async"] }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt", "time"] }
tokio-stream = { version = "0.1.18", default-features = false }
manatui-utils = { version = "0.1.0", path = "../manatui-utils" }

[dev-dependencies]
manatui = { path = "..", features = ["nightly", "macros"] }
manatui-macros.workspace = true 
tracing-subscriber = "0.3.22"
color-eyre = "*"

[lints]
workspace = true
