[package]
name = "manatui-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
manatui = { version = "0.0.2", path = "..", features = ["macros", "nightly"] }
criterion = "0.8.2"
gungraun = "0.17.2"
test-log = { version = "0.2.19", features = ["trace"] }

[[bench]]
name = "bench-gungraun-01"
harness = false

[[bench]]
name = "bench-criterion-01"
harness = false

[lints]
workspace = true

[dev-dependencies]
test-log = { version = "0.2.19", features = ["trace"] }
