[package]
name = "manatui-elemental"
version = "0.0.1"
edition = "2024"
license = "MIT"

[features]
nightly = []

[dependencies]
ratatui.workspace = true
bon = { workspace = true, features = ["experimental-overwritable"] }
derive_more.workspace = true
tracing.workspace = true
hecs.workspace = true
glam.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
tui-scrollview = "0.6.2"
manatui-utils = { version = "0.1.0", path = "../manatui-utils" }

[dev-dependencies]
manatui-macros.workspace = true 
tracing-subscriber = "0.3.22"
color-eyre = "*"
