[package]
name = "manatui-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0.44"
convert_case = "0.10.0"
bon.workspace = true

[dev-dependencies]
manatui = { path = "..", features = ["nightly"]}
ratatui.workspace = true

[lints]
workspace = true

