[package]
name = "manatui-tea"
version = "0.1.0"
edition = "2024"

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm"]
scroll = ["ratatui/scrolling-regions"]
tachyonfx = ["dep:tachyonfx"]

[dependencies]
manatui-layout.workspace = true
ratatui.workspace = true
bon = { workspace = true, features = ["experimental-overwritable"] }
derive_more.workspace = true
tracing.workspace = true
hecs.workspace = true
glam.workspace = true
crossterm = { optional = true, version = "0.29.0", default-features = false, features = ["event-stream"] }
flume = { version = "0.12.0", default-features = false, features = ["async"] }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt", "time"] }
tokio-stream = { version = "0.1.18", default-features = false }
manatui-utils = { version = "0.1.0", path = "../manatui-utils" }
tailcall = "1.0.1"
smallbox = { version = "0.8.8", features = ["nightly"] }
thiserror = "2.0.18"
im = "15.1.0"
anyhow = "*"
tachyonfx = { version = "0.25.0", optional = true, features = ["sendable", "std-duration"] }

[dev-dependencies]
manatui-macros.workspace = true 
manatui.path = ".."
tracing-subscriber = "0.3.22"
anyhow = "*"

[lints]
workspace = true
