[package]
name = "example-tea-ui-components"
version = "0.1.0"
authors = ["wyvernbw <iamwyvern511@gmail.com>"]
edition = "2024"

[dependencies]
color-eyre = "*"
manatui = { path = "../.." }
manatui-tea-ui = { path = "../../manatui-tea-ui" }
tokio = { version = "*", features = ["macros", "rt"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
