[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2024"

[dependencies]
color-eyre = "*"
manatui = { version = "*", git = "https://github.com/wyvernbw/manatui.git", features = ["macros", "nightly"] }
tokio = { version = "*", features = ["macros", "rt"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
